err/mongoopcat.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MongoOpCat'...
Listing './lib/python3.5/site-packages/MongoOpCat/conf'...
Listing './lib/python3.5/site-packages/MongoOpCat/monitor'...
Listing './lib/python3.5/site-packages/MongoOpCat/sender'...
Compiling './lib/python3.5/site-packages/MongoOpCat/sender/FSSenderCat.py'...
***   File "./lib/python3.5/site-packages/MongoOpCat/sender/FSSenderCat.py", line 30
    if self.fs.name <> fsName:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/MongoOpCat/sender/StdOutSenderCat.py'...
***   File "./lib/python3.5/site-packages/MongoOpCat/sender/StdOutSenderCat.py", line 19
    print "[%s] update on %s, %s" % (ts.as_datetime(),ns,restoreFromOplog(raw))
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/MongoOpCat/utils'...
Listing './lib/python3.5/site-packages/MongoOpCat-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
